--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.8",
     "nodemon": "^2.0.13",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "stripe": "^8.179.0",
+    "uuid": "^8.3.2"
   }
 }
